--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,10 +4,13 @@
     layout:decorate="~{/fragments/layout}">
 <head>
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <title>Error</title>
 </head>
 <body>
-    <div layout:fragment="content">
+    <header th:insert="~{fragments/navigation}"></header>    
+    <div>
         <div class="container" style="height: 500px;">
             <div class="row">
                 <div class="col-md-6 mx-auto mt-5 text-center">
@@ -28,6 +31,9 @@
             </div>
         </div>
     </div>
+    <div th:replace="~{fragments/footer}"></div>
 
+    <script th:src="@{/js/nav.js}" ></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
