--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"     
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{/fragments/layout}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
-   </head>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <title>Home</title>
+</head>
 <body>
-    <section layout:fragment="content" id="hero">
+    <header th:insert="~{fragments/navigation}"></header>  
+    <section id="hero">
         <div id="page-title" class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-9 text-center">
@@ -20,9 +21,9 @@
         </div>
         <div th:replace="~{fragments/converter(link='/convert')}"></div>
     </section>
-    <th:block layout:fragment="script">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script type="text/javascript" th:src="@{/js/main.js}"></script>
-    </th:block>
+    <div th:replace="~{fragments/footer}"></div>
+    <script th:src="@{/js/nav.js}" ></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 </body>
 </html>
