--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <html lang="en" xmlns:th="http://www.thymeleaf.org"     
-    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{/fragments/layout}">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <title>Result</title>
+</head>
 <body>
-    <div layout:fragment="content"  class="container mt-4" style="min-height: 100vh;">
-        <!-- <div th:insert="~{fragments/navigation :: back-button}"></div> -->
+    <header th:insert="~{fragments/navigation}"></header>  
+    <div class="container mt-4" style="min-height: 100vh;">
         <h1>Result</h1>
         <div class="card mb-3" th:each="image : ${images}">    
             <div class="row justify-content-center no-gutters">
@@ -24,8 +27,10 @@
         </div>
         <div th:replace="~{fragments/navigation :: back-button}"></div>
     </div>
-    <th:block layout:fragment="script">
-        <script type="text/javascript" th:src="@{/js/result.js}"></script>
-    </th:block>
+    <div th:replace="~{fragments/footer}"></div>
+
+    <script th:src="@{/js/nav.js}" ></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/result.js}"></script>
   </body>
 </html>
