--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -6,17 +6,17 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item px-2">
-                <a class="nav-link" aria-current="page" th:href="@{/}">Home</a>
+              <li class="nav-item ps-5 px-2">
+                <a class="nav-link" aria-current="page" th:href="@{/}" th:text="#{main.name}">Home</a>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link" th:href="@{/pdf-converter}">PDF</a>
+                <a class="nav-link" th:href="@{/pdf-converter}" th:text="#{image.pdf}">PDF</a>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link" th:href="@{/word-converter}">Word</a>
+                <a class="nav-link" th:href="@{/word-converter}" th:text="#{image.docx}">Docx</a>
               </li>
               <li class="nav-item px-2" sec:authorize="isAuthenticated()">
-                <a class="nav-link" th:href="@{/files}">Files</a>
+                <a class="nav-link" th:href="@{/files}" th:text="#{files.name}">Files</a>
               </li>
               
               <li class="nav-item dropdown px-2">
